front page, more content

--- a/docs/units/_02_Courses/03_L3.md
+++ b/docs/units/_02_Courses/03_L3.md
@@ -2,9 +2,9 @@
 title: Lehramt (L3)
 ---
 
-Courses in the study programme "Geography" (L3, Lehramtsstudium Erdkunde)
+Our courses in the study programme "Teacher of Geography for grammar school" (L3, Lehramtsstudium Erdkunde) can be found [here](https://oer.uni-marburg.de/ilias.php?ref_id=1651239&cmd=render&cmdClass=ilrepositorygui&cmdNode=ty&baseClass=ilrepositorygui){:target="_blank"}
 
 <!--more-->
 
 
-xxx
+
