courses finished (almost)

--- a/docs/units/_02_courses/04_L3.md
+++ b/docs/units/_02_courses/04_L3.md
@@ -1,15 +1,44 @@
 ---
 title: Lehramt (L3)
 toc: true
+toc_label: L3 courses
 header:
   image: /assets/images/heroteaser/heroteaser_6to1.jpg
 #  image_description: "xxxxxx"
 #  caption: "xxx"
+feature_row_course_L3_SoSe2020:
+  - image_path: assets/images/courses/icon_PS_RS.png
+    title: "???"
+    excerpt: "???"
+    url: "https://geomoer.github.io/moer-bsc-project-seminar-remote-sensing/"
+    btn_label: "Go to course"
+    btn_class: "btn--primary"
+
+feature_row_course_L3_WiSe19/20:
+  - image_path: assets/images/courses/icon_meko.jpg
+    title: "Medienkompetenz"
+#    excerpt: "Bachelor / L3"
+    url: "https://geomoer.github.io/moer-meko/"
+    btn_label: "Go to course"
+    btn_class: "btn--primary"
 ---
 
-Our courses in the study programme "Teacher of Geography for grammar school" (L3, Lehramtsstudium Erdkunde) can be found [here](https://oer.uni-marburg.de/ilias.php?ref_id=1651239&cmd=render&cmdClass=ilrepositorygui&cmdNode=ty&baseClass=ilrepositorygui){:target="_blank"}
+Below are our most recent L3 courses.
 
 <!--more-->
 
 
+# Sommer term 2020
+
+{% include feature_row id="feature_row_course_L3_SoSe2020" %}
+
+
+# Winter term 2019/2020
+
+{% include feature_row id="feature_row_course_L3_WiSe19/20" %}
+
+
+# More
+
+More courses in the L3 programme "Teacher of Geography for Grammar Schools" can be found [here](https://oer.uni-marburg.de/goto.php?target=cat_1651239&client_id=UNIMR){:target="_blank"}
 
