--- a/docs/units/_02_courses/04_L3.md
+++ b/docs/units/_02_courses/04_L3.md
@@ -7,10 +7,10 @@ header:
 #  image_description: "xxxxxx"
 #  caption: "xxx"
 feature_row_course_L3_SoSe2020:
-  - image_path: assets/images/courses/icon_PS_RS.png
-    title: "???"
-    excerpt: "???"
-    url: "https://geomoer.github.io/moer-bsc-project-seminar-remote-sensing/"
+  - image_path: assets/images/courses/icon_todo.png
+    title: Geoinformatik &emsp;&emsp;
+#    excerpt: "???"
+    url: "todo"
     btn_label: "Go to course"
     btn_class: "btn--primary"
 
@@ -25,17 +25,19 @@ feature_row_course_L3_WiSe19/20:
 
 Below are our most recent L3 courses.
 
+<span style="color:red">   Zusammenlegen mit Bachelor?   </span>
+
 <!--more-->
 
 
 # Sommer term 2020
 
-{% include feature_row id="feature_row_course_L3_SoSe2020" %}
+{% include feature_row id="feature_row_course_L3_SoSe2020" type="left" %}
 
 
 # Winter term 2019/2020
 
-{% include feature_row id="feature_row_course_L3_WiSe19/20" %}
+{% include feature_row id="feature_row_course_L3_WiSe19/20" type="left" %}
 
 
 # More
